--- a/swissのコピー.html
+++ b/swissのコピー.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Swiss</title>
+  <title>Swissスイススイス</title>
   <link rel="stylesheet" type="text/css" href="swiss.css">
   <!--デフォルトのスタイルシートを一旦無効にする　-->
   <link rel="stylesheet" type="text/css" href="reset.css">
